--- a/mumble-server.env
+++ b/mumble-server.env
@@ -1,8 +1,9 @@
-# This needs to be set on first start at least
+# Either set this for first start of an empty data volume or
+# read the password from the container console on first start.
 # MUMBLE_SUPERUSER_PASSWORD=SoSecret
 MUMBLE_CONFIG_BANDWIDTH=327680
-MUMBLE_CONFIG_CHANNELNAME=\\S.+\\S+
-MUMBLE_CONFIG_USERNAME=\\S+.+\\S+
+MUMBLE_CONFIG_CHANNELNAME=.+ # Everything allowed
+MUMBLE_CONFIG_USERNAME=\\S+.+\\S+ # Names can contain any characters as long as they dont start or end with a space char
 MUMBLE_CONFIG_TIMEOUT=30
 MUMBLE_CONFIG_USERS=30
 MUMBLE_CONFIG_USERSPERCHANNEL=0
@@ -20,7 +21,7 @@ MUMBLE_CONFIG_LOGDAYS=-1
 MUMBLE_CONFIG_ALLOWHTML=true
 MUMBLE_CONFIG_CERTREQUIRED=true
 MUMBLE_CONFIG_SENDVERSION=true
-MUMBLE_CONFIG_SUGGESTVERSION=1.4.230
+MUMBLE_CONFIG_SUGGESTVERSION=1.4.230 # This should be incremented every now and then
 MUMBLE_CONFIG_AUTOBANSUCCESSFULCONNECTIONS=false
 MUMBLE_CONFIG_REGISTERNAME="Troftu Mumble Server"
 MUMBLE_CONFIG_WELCOMETEXT="<br />Willkommen auf dem <b>Troftu Mumble Server</b>. <br/>Neuigkeiten zum Server findest du im Kommentar des obersten Kanals.<br/>"
